Fix banner jumping around on Firefox and Safari.

--- a/SPK/css/official.gov.css
+++ b/SPK/css/official.gov.css
@@ -20,6 +20,7 @@
   -ms-transform: translateY(-100%);
   -o-transform: translateY(-100%);
   position: fixed;
+  visibility: collapse;
 }
 
 .icon_lock {
